# bandits_algorithms

./: .Rhistory  .gitignore  README.md  basicBandits.ipynb  global_setup.Rmd  pyproject.toml
adv_sampling/bandits_turing/: Project.toml
adv_sampling/notebooks/: 01_run_julia_bandit.ipynb  Project.toml
appendix/: additional_jags_models.R  daynamic_modeling.ipynb
bandits_turing/: Manifest.toml  experiment_gloabl.jl  experiment_global.jl  turing_bandit_setup.jl
baseline/: baseline_bandits.Rmd
hmm/: .RData  .Rhistory  KFAS_experiments.Rmd  advanced_model.jags  creating_jags.R  daynamic_modeling.ipynb  global_exp_nim.Rmd  global_experiments.Rmd  global_experiments_batching.Rmd  global_setup.Rmd  global_truth_data.rds  local_experiments.Rmd  local_setup.Rmd  local_setup_sim.Rmd  local_truth_data.rds  poor_model.jags  setup.Rmd  traceplots.Rmd  trials.Rmd
notebooks/: Manifest.toml
spatial/notebooks/: 01_compare_bandits.ipynb  02_gp_bandits.ipynb
spatial/src/: __init__.py  gp_bandits.py  regret.py  reward_functions.py  simulation_setup.py  standard_bandits.py  utils.py  zoomin_bandit.py  zooming.py
src/: .RData  .Rhistory  creating_jags.R  load_all.R
src/functions/: baselines.R  cumulative_regret.R  (+3 more)
switching/: bandit_msm.Rmd  bandit_msm_intitial.Rmd  bandit_msm_stan.Rmd  dynamic_bernoulli_bandit.Rmd  fit_msm_model.rds  hmm_2arm_2states.rds  hmm_2arm_2states.stan  hmm_bernoulli.stan
switching_models/: .Rhistory  backup2.Rmd  bandit_msm copy.Rmd  bandit_msm.Rmd  fit_msm_model.rds  hmm_bernoulli.rds  hmm_bernoulli.stan  msm_bernoulli.rds  msm_bernoulli.stan
(+105 files in other folders)
