[tool.poetry]
package-mode = false
name = "bandits-env"
version = "0.1.0"
description = "Bandit algorithms with Pyro and GPU acceleration"
authors = ["Marvin Ernst <marvin.ernst@bse.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
pyro-ppl = "^1.9.0"
torch = "^2.2.0"
matplotlib = "^3.7.1"
numpy = "^1.24"
pandas = "^2.2"
ipykernel = "^6.29"
seaborn = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
