[tool.poetry]
package-mode = false
name = "bandits-env"
version = "0.1.0"
description = "Bandit Algorithms with Pyro, Julia, and Zoom-In"
authors = ["Marvin Ernst <marvin.ernst@bse.eu>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
matplotlib = "^3.8"
scikit-learn = "^1.4"
PyXAB = "^0.1"
pyro-ppl = "^1.9.0"
torch = "^2.2.0"
pandas = "^2.2"
ipykernel = "^6.29"
seaborn = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
